--- a/faq.html
+++ b/faq.html
@@ -3,11 +3,31 @@
 You can find the code of your language here - https://www.w3schools.com/tags/ref_language_codes.asp -->
 <html lang="en">
   <head>
-    <title>FAQ's</title>
-    <meta
-      name="description"
-      content="Dr. Jenit Gandhi &mdash; Consultant Surgical Gastroenterology"
-    />
+     <!-- on page seo starts -->
+<title>FAQs Answered By Best Colorectal Surgeon in Ahmedabad</title>
+<meta name="description" content="Find answers to common questions about colorectal surgeries, treatments, and recovery from the best colorectal surgeon in Ahmedabad." />
+<meta name="keyword" content="causes of rectal cancer, risk for colorectal cancer, risk of colon cancer by age, how can you prevent colon cancer" />
+<meta name="robots" content="index,follow" />
+<meta name="contact" Content="+91 82001 45692" />
+<meta name="distribution" Content="Global" />
+<meta name="rating" content="General" />
+<meta name="revisit-after" content="1 days" />
+<meta name="geo.placename" content="Ahmedabad, India" />
+<meta name="geo.placename" content="Gujarat, India" />
+<meta name="author" content="Dr. Jenit Gandhi, jenitgandhi@yahoo.com" />
+<meta name="og:title" content="FAQs Answered By Best Colorectal Surgeon in Ahmedabad" />
+<meta name="og:description" content="Find answers to common questions about colorectal surgeries, treatments, and recovery from the best colorectal surgeon in Ahmedabad." />
+<meta property="og:image" content="https://www.bestcolorectalsurgeonahmedabad.com/images-2/work4.jpeg"/>
+<meta name="og:email" content="jenitgandhi@yahoo.com" />
+<meta name="og:phone_number" content="+91 82001 45692" />
+<meta name="og:url" content="https://www.bestcolorectalsurgeonahmedabad.com/faq.html" />
+<meta name="twitter:card" content="summary">
+<meta name="twitter:site" content="@Dr.JrnitGandhi">
+<meta name="twitter:creator" content="@Dr.JrnitGandhi">
+<meta name="twitter:title" content="FAQs Answered By Best Colorectal Surgeon in Ahmedabad">
+<meta name="twitter:description" content="Find answers to common questions about colorectal surgeries, treatments, and recovery from the best colorectal surgeon in Ahmedabad.">
+ <!-- on page seo ends  -->
+
     <meta charset="utf-8" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
