--- a/faq.html
+++ b/faq.html
@@ -343,7 +343,7 @@ People aged 50 or older, those with a personal or family history of colorectal c
             </div>
 
             <div class="col-md-7 offset-md-1 offset-lg-2 clearfix">
-              <b>Based in Ahmedabad, India.</b>
+              <b>Created By : <a href="https://ignitax.com/" target="_blank">IGNITAX</a></b>
 
               <!-- Back to Top Link -->
               <div class="local-scroll float-end mt-n20 mt-sm-10">
