canonical-tag-added-15:00-111024-saumya

--- a/index.html
+++ b/index.html
@@ -26,6 +26,8 @@ You can find the code of your language here - https://www.w3schools.com/tags/ref
 <meta name="twitter:creator" content="@Dr.JrnitGandhi">
 <meta name="twitter:title" content="Best Colorectal Surgeon In Ahmedabad">
 <meta name="twitter:description" content="Find the best colorectal surgeon in Ahmedabad, offering expert care in colon and rectal surgeries with advanced techniques for effective treatment and recovery.">
+<!-- Canonical tag -->
+<link rel="canonical" href="https://www.bestcolorectalsurgeonahmedabad.com/" />
  <!-- on page seo ends  -->
     <meta charset="utf-8" />
 
