ads-keyword-added-15:50-231024-saumya

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ You can find the code of your language here - https://www.w3schools.com/tags/ref
     <!-- on page seo starts -->
 <title>Best Colorectal Surgeon In Ahmedabad</title>
 <meta name="description" content="Find the best colorectal surgeon in Ahmedabad, offering expert care in colon and rectal surgeries with advanced techniques for effective treatment and recovery." />
-<meta name="keyword" content="rectum, rectal cancer doctor, best colorectal surgeon in Ahmedabad, Best Gastro Onco Surgeon in Ahmedabad, ripstein rectopexy, rectopexy, top gastroenterologist in ahmedabad" />
+<meta name="keyword" content="rectum, rectal cancer doctor, best colorectal surgeon in Ahmedabad, Best Gastro Onco Surgeon in Ahmedabad, ripstein rectopexy, rectopexy, top gastroenterologist in ahmedabad, best doctor for colorectal cancer, best hospital for colorectal surgery in ahmedabad, best hospital for colon surgery, best hospital for colorectal surgery, best hospital for colorectal surgery in ahmedabad" />
 <meta name="robots" content="index,follow" />
 <meta name="contact" Content="+91 82001 45692" />
 <meta name="distribution" Content="Global" />
