--- a/why.html
+++ b/why.html
@@ -3,30 +3,56 @@
 You can find the code of your language here - https://www.w3schools.com/tags/ref_language_codes.asp -->
 <html lang="en">
   <head>
-        <!-- on page seo starts -->
-<title>Why Choose The Best Colorectal Surgeon In Ahmedabad</title>
-<meta name="description" content="Discover why patients trust the best colorectal surgeon in Ahmedabad for advanced colon and rectal surgery, personalized care, and excellent surgical outcomes." />
-<meta name="keyword" content="colonoscopy surgeon, gastrointestinal disease, stomach infection, fistula treatment, best treatment for fistula, low anterior resection, gastrologist in ahmedabad" />
-<meta name="robots" content="index,follow" />
-<meta name="contact" Content="+91 82001 45692" />
-<meta name="distribution" Content="Global" />
-<meta name="rating" content="General" />
-<meta name="revisit-after" content="1 days" />
-<meta name="geo.placename" content="Ahmedabad, India" />
-<meta name="geo.placename" content="Gujarat, India" />
-<meta name="author" content="Dr. Jenit Gandhi, jenitgandhi@yahoo.com" />
-<meta name="og:title" content="Why Choose The Best Colorectal Surgeon In Ahmedabad" />
-<meta name="og:description" content="Discover why patients trust the best colorectal surgeon in Ahmedabad for advanced colon and rectal surgery, personalized care, and excellent surgical outcomes." />
-<meta property="og:image" content="https://www.bestcolorectalsurgeonahmedabad.com/images-2/work4.jpeg"/>
-<meta name="og:email" content="jenitgandhi@yahoo.com" />
-<meta name="og:phone_number" content="+91 82001 45692" />
-<meta name="og:url" content="https://www.bestcolorectalsurgeonahmedabad.com/why.html" />
-<meta name="twitter:card" content="summary">
-<meta name="twitter:site" content="@Dr.JrnitGandhi">
-<meta name="twitter:creator" content="@Dr.JrnitGandhi">
-<meta name="twitter:title" content="Why Choose The Best Colorectal Surgeon In Ahmedabad">
-<meta name="twitter:description" content="Discover why patients trust the best colorectal surgeon in Ahmedabad for advanced colon and rectal surgery, personalized care, and excellent surgical outcomes.">
- <!-- on page seo ends  -->
+    <!-- on page seo starts -->
+    <title>
+      Why Choose The Best Colorectal Surgeon In Ahmedabad | Dr. Jenit Gandhi
+    </title>
+    <meta
+      name="description"
+      content="Discover why patients trust the best colorectal surgeon in Ahmedabad for advanced colon and rectal surgery, personalized care, and excellent surgical outcomes."
+    />
+    <meta
+      name="keyword"
+      content="colonoscopy surgeon, gastrointestinal disease, stomach infection, fistula treatment, best treatment for fistula, low anterior resection, gastrologist in ahmedabad"
+    />
+    <meta name="robots" content="index,follow" />
+    <meta name="contact" content="+91 82001 45692" />
+    <meta name="distribution" content="Global" />
+    <meta name="rating" content="General" />
+    <meta name="revisit-after" content="1 days" />
+    <meta name="geo.placename" content="Ahmedabad, India" />
+    <meta name="geo.placename" content="Gujarat, India" />
+    <meta name="author" content="Dr. Jenit Gandhi, jenitgandhi@yahoo.com" />
+    <meta
+      name="og:title"
+      content="Why Choose The Best Colorectal Surgeon In Ahmedabad"
+    />
+    <meta
+      name="og:description"
+      content="Discover why patients trust the best colorectal surgeon in Ahmedabad for advanced colon and rectal surgery, personalized care, and excellent surgical outcomes."
+    />
+    <meta
+      property="og:image"
+      content="https://www.bestcolorectalsurgeonahmedabad.com/images-2/work4.jpeg"
+    />
+    <meta name="og:email" content="jenitgandhi@yahoo.com" />
+    <meta name="og:phone_number" content="+91 82001 45692" />
+    <meta
+      name="og:url"
+      content="https://www.bestcolorectalsurgeonahmedabad.com/why.html"
+    />
+    <meta name="twitter:card" content="summary" />
+    <meta name="twitter:site" content="@Dr.JrnitGandhi" />
+    <meta name="twitter:creator" content="@Dr.JrnitGandhi" />
+    <meta
+      name="twitter:title"
+      content="Why Choose The Best Colorectal Surgeon In Ahmedabad"
+    />
+    <meta
+      name="twitter:description"
+      content="Discover why patients trust the best colorectal surgeon in Ahmedabad for advanced colon and rectal surgery, personalized care, and excellent surgical outcomes."
+    />
+    <!-- on page seo ends  -->
 
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -457,6 +483,18 @@ You can find the code of your language here - https://www.w3schools.com/tags/ref
             </div>
           </div>
 
+          <div
+            class="row text-gray col-md-4 col-lg-12"
+            style="text-align: center"
+          >
+            <b
+              >Tags : colonoscopy surgeon | gastrointestinal disease, stomach
+              infection | fistula treatment | best treatment for fistula | low
+              anterior resection | gastrologist in ahmedabad</b
+            >
+          </div>
+          <br /><br /><br />
+
           <!-- Footer Text -->
           <div class="row text-gray">
             <div class="col-md-4 col-lg-3">
@@ -464,7 +502,10 @@ You can find the code of your language here - https://www.w3schools.com/tags/ref
             </div>
 
             <div class="col-md-7 offset-md-1 offset-lg-2 clearfix">
-              <b>Created By : <a href="https://ignitax.com/" target="_blank">IGNITAX</a></b>
+              <b
+                >Created By :
+                <a href="https://ignitax.com/" target="_blank">IGNITAX</a></b
+              >
 
               <!-- Back to Top Link -->
               <div class="local-scroll float-end mt-n20 mt-sm-10">
